syntax = "proto3";

package pb;

option go_package = "auth/pkg/grpc/pb";


//The Auth service definition.
service Auth {
 rpc GenerateToken (GenerateTokenRequest) returns (GenerateTokenReply);
 rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenReply);
 rpc RefreshToken  (RefreshTokenRequest ) returns (RefreshTokenReply );
}
message GenerateTokenRequest {}
message GenerateTokenReply {}
message ValidateTokenRequest {}
message ValidateTokenReply {}
message RefreshTokenRequest {}
message RefreshTokenReply {}
